# ml-esg-3

./: .gitignore  README.md  ml-esg-3-EDA.ipynb  multilingual_finetune.ipynb  multilingual_finetune_01.ipynb  multilingual_finetune_weijie.ipynb  pyproject.toml  trained_model.pth
ESG_Pipeline_1/: .gitignore
ESG_Pipeline_3/: .gitignore  README.md  pyproject.toml
[Result] ESG-BERT-0/: events.out.tfevents.1705747603.RaphaelYang.17412.0
config/: bert_base.yaml  bert_config.yaml  bert_large.yaml  config.yaml  multilingual_bert.yaml  t5_base.yaml  t5_config.yaml
dataset/: ML-ESG-3_Trainset_English.json  ML-ESG-3_Trainset_French.json  ML-ESG-3_Trainset_Japanese.json  README.md  Translation_Chinese_Dataset.parquet  Translation_French_Dataset.parquet  augmentation_dataset.parquet  consolidated.parquet  reuter_gpt4_label.parquet  temp_reuter_filtered.parquet  temp_reuter_gemini_filtered.parquet  temp_reuter_neox_filtered.parquet  temp_reuter_openai_filtered.parquet  temp_reuter_pythia_filtered.parquet  train_df.parquet  train_df_Chinese_translated.parquet  train_df_English_augmented_segmented.parquet  train_df_French_translated.parquet  train_df_all_english.parquet  training_dataset.parquet  validation_dataset.parquet  validation_new_dataset.parquet  validation_set.parquet
notebooks/: Notebook - Data Augmentation Gemini.ipynb  Notebook - Data Augmentation NeoXT.ipynb  Notebook - Data Augmentation Pythia.ipynb  Notebook - Data Augmentation Reuters News.ipynb  Notebook - Data Augmentation.ipynb  Notebook - Data Preprocessing.ipynb  Notebook - DeepL Translation.ipynb  (+13 more)
(+109 files in other folders)
